--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -515,6 +515,8 @@ img {
 }
 
 .form-text{
+  width: 100%;
+  border-radius: 0.5rem;
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
@@ -678,10 +680,6 @@ img {
 
 .w-14{
   width: 3.5rem;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .max-w-6xl{
