--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -19,12 +19,17 @@ img {
         focus:ring-sky-500 focus:border-sky-500;
 }
 
+.form-checkbox {
+  @apply rounded w-5 h-5 border-gray-300 shadow-inner cursor-pointer text-sky-500
+        focus:ring-sky-500
+}
+
 .btn {
-  @apply px-3 py-2 flex items-center justify-center rounded-lg;
+  @apply px-3 py-2 flex items-center justify-center rounded-lg gap-2;
 }
 
 .btn-block {
-  @apply !block w-full;
+  @apply w-full;
 }
 
 .btn-primary {
