wip: setup turbolink & toast component

--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp");
+
 @tailwind base;
 
 img {
@@ -15,8 +17,7 @@ img {
 @tailwind components;
 
 .form-text {
-  @apply border-gray-300 w-full rounded-lg
-        focus:ring-sky-500 focus:border-sky-500;
+  @apply w-full border-gray-300 rounded-lg focus:ring-sky-500 focus:border-sky-500;
 }
 
 .form-checkbox {
@@ -25,7 +26,7 @@ img {
 }
 
 .btn {
-  @apply px-3 py-2 flex items-center justify-center rounded-lg gap-2;
+  @apply flex items-center justify-center gap-2 px-3 py-2 rounded-lg;
 }
 
 .btn-block {
@@ -33,8 +34,7 @@ img {
 }
 
 .btn-primary {
-  @apply bg-sky-500 text-white border border-sky-500
-        hover:bg-sky-600 hover:border-sky-600;
+  @apply text-white border bg-sky-500 border-sky-500 hover:bg-sky-600 hover:border-sky-600;
 }
 
 @tailwind utilities;
