--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -754,6 +754,10 @@ img {
   margin-bottom: 1rem;
 }
 
+.ml-3{
+  margin-left: 0.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -804,6 +808,10 @@ img {
 
 .max-w-6xl{
   max-width: 72rem;
+}
+
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .scale-90{
@@ -868,6 +876,10 @@ img {
   gap: 0.5rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -920,6 +932,10 @@ img {
 
 .p-7{
   padding: 1.75rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .py-4{
