--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -26,7 +26,7 @@ img {
 }
 
 .btn {
-  @apply flex items-center justify-center gap-2 px-3 py-2 rounded-lg;
+  @apply inline-flex items-center justify-center gap-2 px-3 py-2 rounded-lg;
 }
 
 .btn-block {
@@ -35,6 +35,10 @@ img {
 
 .btn-primary {
   @apply text-white border bg-sky-500 border-sky-500 hover:bg-sky-600 hover:border-sky-600;
+}
+
+.btn-secondary {
+  @apply text-gray-500 border bg-slate-100 border-slate-100 hover:bg-slate-100 hover:border-slate-100;
 }
 
 @tailwind utilities;
