--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -26,7 +26,7 @@ img {
 }
 
 .btn {
-  @apply inline-flex items-center justify-center gap-2 px-3 py-2 rounded-lg;
+  @apply inline-flex items-center justify-center gap-1 px-3 py-2 rounded-lg;
 }
 
 .btn-block {
@@ -38,7 +38,7 @@ img {
 }
 
 .btn-secondary {
-  @apply text-gray-500 border bg-slate-100 border-slate-100 hover:bg-slate-100 hover:border-slate-100;
+  @apply text-gray-700 border border-slate-200 bg-slate-200 hover:bg-slate-300 hover:border-slate-300;
 }
 
 @tailwind utilities;
