--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -726,6 +726,21 @@ img {
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
 
+.btn-light{
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.btn-light:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .btn-secondary{
   border-width: 1px;
   --tw-border-opacity: 1;
@@ -1334,6 +1349,11 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-sky-500{
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1453,6 +1473,11 @@ img {
 #sidebar .nav-item:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-sky-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
