--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -1435,6 +1435,11 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
