wip(catalog_admin): done

--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -29,6 +29,11 @@ img {
         focus:ring-sky-500
 }
 
+.form-radio {
+  @apply rounded-full w-5 h-5 border-gray-300 shadow-inner cursor-pointer text-sky-500
+        focus:ring-sky-500
+}
+
 .btn {
   @apply inline-flex items-center justify-center gap-1 px-3 py-2 rounded-lg;
 }
