--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -597,14 +597,14 @@ select{
 }
 
 img {
-  -webkit-backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden;
   transform: translateZ(0);
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: -o-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
-  -ms-interpolation-mode: nearest-neighbor;
+  -ms-interpolation-mode: nearest-neighbor; */
 }
 
 .container{
@@ -997,8 +997,24 @@ img {
   height: 3.5rem;
 }
 
+.h-40{
+  height: 10rem;
+}
+
+.h-full{
+  height: 100%;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
+}
+
+.max-h-40{
+  max-height: 10rem;
+}
+
+.max-h-96{
+  max-height: 24rem;
 }
 
 .min-h-screen{
@@ -1045,16 +1061,24 @@ img {
   width: 18rem;
 }
 
+.w-28{
+  width: 7rem;
+}
+
 .w-20{
   width: 5rem;
 }
 
-.w-24{
-  width: 6rem;
+.w-16{
+  width: 4rem;
 }
 
-.w-28{
-  width: 7rem;
+.w-12{
+  width: 3rem;
+}
+
+.w-40{
+  width: 10rem;
 }
 
 .min-w-\[1000px\]{
@@ -1261,6 +1285,10 @@ img {
   border-bottom-width: 1px;
 }
 
+.border-dashed{
+  border-style: dashed;
+}
+
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1320,6 +1348,11 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
+.bg-sky-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1328,6 +1361,16 @@ img {
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-6{
@@ -1410,6 +1453,11 @@ img {
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pt-8{
@@ -1564,6 +1612,11 @@ img {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
+.text-slate-500{
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
@@ -1694,6 +1747,88 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.file\:mr-4::-webkit-file-upload-button{
+  margin-right: 1rem;
+}
+
+.file\:mr-4::file-selector-button{
+  margin-right: 1rem;
+}
+
+.file\:rounded-full::-webkit-file-upload-button{
+  border-radius: 9999px;
+}
+
+.file\:rounded-full::file-selector-button{
+  border-radius: 9999px;
+}
+
+.file\:border-0::-webkit-file-upload-button{
+  border-width: 0px;
+}
+
+.file\:border-0::file-selector-button{
+  border-width: 0px;
+}
+
+.file\:bg-violet-50::-webkit-file-upload-button{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
+.file\:bg-violet-50::file-selector-button{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
+.file\:py-2::-webkit-file-upload-button{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.file\:py-2::file-selector-button{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.file\:px-4::-webkit-file-upload-button{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.file\:px-4::file-selector-button{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.file\:text-sm::-webkit-file-upload-button{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.file\:text-sm::file-selector-button{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.file\:font-semibold::-webkit-file-upload-button{
+  font-weight: 600;
+}
+
+.file\:font-semibold::file-selector-button{
+  font-weight: 600;
+}
+
+.file\:text-sky-600::-webkit-file-upload-button{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.file\:text-sky-600::file-selector-button{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
@@ -1707,6 +1842,16 @@ img {
 .hover\:text-gray-600:hover{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.hover\:file\:bg-sky-100::-webkit-file-upload-button:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+
+.hover\:file\:bg-sky-100::file-selector-button:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
