feat(admin): product previews

--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -840,6 +840,10 @@ img {
   top: 4rem;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .top-2{
   top: 0.5rem;
 }
@@ -858,6 +862,14 @@ img {
 
 .z-20{
   z-index: 20;
+}
+
+.z-\[2\]{
+  z-index: 2;
+}
+
+.z-\[1\]{
+  z-index: 1;
 }
 
 .z-10{
@@ -1061,6 +1073,14 @@ img {
   width: 18rem;
 }
 
+.w-40{
+  width: 10rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
 .w-28{
   width: 7rem;
 }
@@ -1069,16 +1089,8 @@ img {
   width: 5rem;
 }
 
-.w-16{
-  width: 4rem;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-40{
-  width: 10rem;
+.w-1\/2{
+  width: 50%;
 }
 
 .min-w-\[1000px\]{
@@ -1175,6 +1187,10 @@ img {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-start{
@@ -1348,24 +1364,19 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.bg-sky-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
-}
-
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.bg-sky-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -1445,6 +1456,11 @@ img {
   padding-right: 0.75rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1453,11 +1469,6 @@ img {
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .pt-8{
@@ -1953,6 +1964,14 @@ img {
 }
 
 @media (min-width: 768px){
+
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
+  .md\:w-40{
+    width: 10rem;
+  }
 
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
