--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -806,28 +806,56 @@ img {
   top: 4rem;
 }
 
-.col-span-12{
-  grid-column: span 12 / span 12;
+.top-\[62px\]{
+  top: 62px;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
+.left-\[-35px\]{
+  left: -35px;
 }
 
-.col-span-3{
-  grid-column: span 3 / span 3;
+.left-\[200px\]{
+  left: 200px;
+}
+
+.top-\[-8px\]{
+  top: -8px;
+}
+
+.top-\[-16px\]{
+  top: -16px;
+}
+
+.left-\[169px\]{
+  left: 169px;
+}
+
+.left-\[172px\]{
+  left: 172px;
+}
+
+.left-\[184px\]{
+  left: 184px;
+}
+
+.top-\[-1px\]{
+  top: -1px;
+}
+
+.left-\[176px\]{
+  left: 176px;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .col-span-1{
   grid-column: span 1 / span 1;
 }
 
-.col-span-5{
-  grid-column: span 5 / span 5;
-}
-
-.col-span-7{
-  grid-column: span 7 / span 7;
+.col-span-12{
+  grid-column: span 12 / span 12;
 }
 
 .mx-auto{
@@ -908,6 +936,10 @@ img {
   display: none;
 }
 
+.h-\[300px\]{
+  height: 300px;
+}
+
 .h-\[24px\]{
   height: 24px;
 }
@@ -932,46 +964,6 @@ img {
   height: 1.25rem;
 }
 
-.h-48{
-  height: 12rem;
-}
-
-.h-20{
-  height: 5rem;
-}
-
-.h-\[120px\]{
-  height: 120px;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-28{
-  height: 7rem;
-}
-
-.h-\[300px\]{
-  height: 300px;
-}
-
-.h-\[331px\]{
-  height: 331px;
-}
-
-.h-\[351px\]{
-  height: 351px;
-}
-
-.h-\[367px\]{
-  height: 367px;
-}
-
-.h-\[400px\]{
-  height: 400px;
-}
-
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -984,6 +976,10 @@ img {
   min-height: calc(100vh - 4rem);
 }
 
+.min-h-\[400px\]{
+  min-height: 400px;
+}
+
 .w-\[24px\]{
   width: 24px;
 }
@@ -994,10 +990,6 @@ img {
 
 .w-full{
   width: 100%;
-}
-
-.w-\[140px\]{
-  width: 140px;
 }
 
 .w-96{
@@ -1028,8 +1020,32 @@ img {
   width: 1.25rem;
 }
 
-.w-\[240px\]{
-  width: 240px;
+.min-w-\[210px\]{
+  min-width: 210px;
+}
+
+.min-w-\[400px\]{
+  min-width: 400px;
+}
+
+.min-w-\[1257\.3px\]{
+  min-width: 1257.3px;
+}
+
+.min-w-\[1258\.3px\]{
+  min-width: 1258.3px;
+}
+
+.min-w-\[12721\.3px\]{
+  min-width: 12721.3px;
+}
+
+.min-w-\[1272\.3px\]{
+  min-width: 1272.3px;
+}
+
+.min-w-\[1280\.3px\]{
+  min-width: 1280.3px;
 }
 
 .max-w-sm{
@@ -1108,28 +1124,16 @@ img {
   resize: both;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-8{
-  grid-template-columns: repeat(8, minmax(0, 1fr));
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1195,16 +1199,8 @@ img {
   border-radius: 0.375rem;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-b{
   border-bottom-width: 1px;
-}
-
-.border-inherit{
-  border-color: inherit;
 }
 
 .border-gray-300{
@@ -1222,9 +1218,14 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
-.bg-\[\#e4e9f2\]{
+.bg-\[\#eee\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(228 233 242 / var(--tw-bg-opacity));
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fff\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-red-100{
@@ -1262,68 +1263,6 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#ababab\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(171 171 171 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ccf9ff\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 249 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f5f9fa\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 249 250 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#babfbf\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 191 191 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e6e8e8\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 232 232 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f2f2f2\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f5f5f5\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e6e6e6\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 230 230 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fff\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-auto{
-  background-size: auto;
-}
-
-.bg-cover{
-  background-size: cover;
-}
-
-.bg-contain{
-  background-size: contain;
-}
-
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .p-4{
   padding: 1rem;
 }
@@ -1338,6 +1277,11 @@ img {
 
 .p-0{
   padding: 0px;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-\[20px\]{
@@ -1355,11 +1299,6 @@ img {
   padding-right: 1.25rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1370,9 +1309,17 @@ img {
   padding-right: 1rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .pl-\[8px\]{
@@ -1383,14 +1330,6 @@ img {
   padding-right: 4rem;
 }
 
-.pl-3{
-  padding-left: 0.75rem;
-}
-
-.pt-1{
-  padding-top: 0.25rem;
-}
-
 .pt-16{
   padding-top: 4rem;
 }
@@ -1399,12 +1338,16 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
+.pl-4{
+  padding-left: 1rem;
 }
 
-.pt-3{
-  padding-top: 0.75rem;
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .text-left{
@@ -1417,6 +1360,11 @@ img {
 
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
@@ -1441,11 +1389,6 @@ img {
   line-height: 2.25rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1462,6 +1405,11 @@ img {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .text-black{
@@ -1625,6 +1573,143 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.before\:absolute::before{
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:top-2::before{
+  content: var(--tw-content);
+  top: 0.5rem;
+}
+
+.before\:top-\[1px\]::before{
+  content: var(--tw-content);
+  top: 1px;
+}
+
+.before\:right-\[2px\]::before{
+  content: var(--tw-content);
+  right: 2px;
+}
+
+.before\:left-\[2px\]::before{
+  content: var(--tw-content);
+  left: 2px;
+}
+
+.before\:left-\[20px\]::before{
+  content: var(--tw-content);
+  left: 20px;
+}
+
+.before\:left-\[80px\]::before{
+  content: var(--tw-content);
+  left: 80px;
+}
+
+.before\:left-\[156px\]::before{
+  content: var(--tw-content);
+  left: 156px;
+}
+
+.before\:z-40::before{
+  content: var(--tw-content);
+  z-index: 40;
+}
+
+.before\:h-6::before{
+  content: var(--tw-content);
+  height: 1.5rem;
+}
+
+.before\:h-\[30\[\]\]::before{
+  content: var(--tw-content);
+  height: 30[];
+}
+
+.before\:h-\[30pc\]::before{
+  content: var(--tw-content);
+  height: 30pc;
+}
+
+.before\:h-\[30px\]::before{
+  content: var(--tw-content);
+  height: 30px;
+}
+
+.before\:w-28::before{
+  content: var(--tw-content);
+  width: 7rem;
+}
+
+.before\:w-\[32px\]::before{
+  content: var(--tw-content);
+  width: 32px;
+}
+
+.before\:w-\[px\]::before{
+  content: var(--tw-content);
+  width: px;
+}
+
+.before\:w-\[70px\]::before{
+  content: var(--tw-content);
+  width: 70px;
+}
+
+.before\:border::before{
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.before\:border-4::before{
+  content: var(--tw-content);
+  border-width: 4px;
+}
+
+.before\:border-\[6px\]::before{
+  content: var(--tw-content);
+  border-width: 6px;
+}
+
+.before\:border-solid::before{
+  content: var(--tw-content);
+  border-style: solid;
+}
+
+.before\:border-t-\[black\]::before{
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-top-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.before\:bg-red-500::before{
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.before\:content-\[\"\"\]::before{
+  --tw-content: "";
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\'\]::before{
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.hover\:bg-blue-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#65c8c6\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
+}
+
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
@@ -1633,6 +1718,14 @@ img {
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.group:hover .group-hover\:block{
+  display: block;
+}
+
+.group:hover .group-hover\:grid{
+  display: grid;
 }
 
 @media (min-width: 640px){
@@ -1659,16 +1752,16 @@ img {
 
 @media (min-width: 1024px){
 
+  .lg\:col-span-7{
+    grid-column: span 7 / span 7;
+  }
+
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
   }
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
-  }
-
-  .lg\:col-span-7{
-    grid-column: span 7 / span 7;
   }
 
   .lg\:mb-0{
@@ -1710,10 +1803,6 @@ img {
 
   .lg\:pl-72{
     padding-left: 18rem;
-  }
-
-  .lg\:pl-10{
-    padding-left: 2.5rem;
   }
 }
 
