--- a/public/css/app.css
+++ b/public/css/app.css
@@ -632,6 +632,12 @@ select {
 .relative {
   position: relative;
 }
+.top-\[-8px\] {
+  top: -8px;
+}
+.left-\[176px\] {
+  left: 176px;
+}
 .top-3 {
   top: 0.75rem;
 }
@@ -659,23 +665,14 @@ select {
 .top-16 {
   top: 4rem;
 }
-.col-span-12 {
-  grid-column: span 12 / span 12;
-}
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-.col-span-3 {
-  grid-column: span 3 / span 3;
+.z-20 {
+  z-index: 20;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
-.col-span-5 {
-  grid-column: span 5 / span 5;
-}
-.col-span-7 {
-  grid-column: span 7 / span 7;
+.col-span-12 {
+  grid-column: span 12 / span 12;
 }
 .mx-auto {
   margin-left: auto;
@@ -736,6 +733,9 @@ select {
 .hidden {
   display: none;
 }
+.h-\[300px\] {
+  height: 300px;
+}
 .h-\[24px\] {
   height: 24px;
 }
@@ -754,38 +754,11 @@ select {
 .h-5 {
   height: 1.25rem;
 }
-.h-48 {
-  height: 12rem;
-}
-.h-20 {
-  height: 5rem;
-}
-.h-\[120px\] {
-  height: 120px;
-}
-.h-40 {
-  height: 10rem;
-}
-.h-28 {
-  height: 7rem;
-}
-.h-\[300px\] {
-  height: 300px;
-}
-.h-\[331px\] {
-  height: 331px;
-}
-.h-\[351px\] {
-  height: 351px;
-}
-.h-\[367px\] {
-  height: 367px;
-}
-.h-\[400px\] {
-  height: 400px;
-}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\] {
   max-height: calc(100vh - 4rem);
+}
+.min-h-\[400px\] {
+  min-height: 400px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -801,9 +774,6 @@ select {
 }
 .w-full {
   width: 100%;
-}
-.w-\[140px\] {
-  width: 140px;
 }
 .w-96 {
   width: 24rem;
@@ -826,8 +796,8 @@ select {
 .w-5 {
   width: 1.25rem;
 }
-.w-\[240px\] {
-  width: 240px;
+.min-w-\[1280\.3px\] {
+  min-width: 1280.3px;
 }
 .max-w-sm {
   max-width: 24rem;
@@ -890,23 +860,11 @@ select {
 .resize {
   resize: both;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -956,14 +914,8 @@ select {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.border-2 {
-  border-width: 2px;
-}
 .border-b {
   border-bottom-width: 1px;
-}
-.border-inherit {
-  border-color: inherit;
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -977,9 +929,17 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
-.bg-\[\#e4e9f2\] {
+.bg-\[\#eee\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(228 233 242 / var(--tw-bg-opacity));
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-red-100 {
   --tw-bg-opacity: 1;
@@ -993,10 +953,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1009,55 +965,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
-.bg-\[\#ababab\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(171 171 171 / var(--tw-bg-opacity));
-}
-.bg-\[\#ccf9ff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 249 255 / var(--tw-bg-opacity));
-}
-.bg-\[\#f5f9fa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 249 250 / var(--tw-bg-opacity));
-}
-.bg-\[\#babfbf\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 191 191 / var(--tw-bg-opacity));
-}
-.bg-\[\#e6e8e8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 232 232 / var(--tw-bg-opacity));
-}
-.bg-\[\#f2f2f2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-.bg-\[\#f5f5f5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-.bg-\[\#e6e6e6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 230 230 / var(--tw-bg-opacity));
-}
-.bg-\[\#fff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-auto {
-  background-size: auto;
-}
-.bg-cover {
-  background-size: cover;
-}
-.bg-contain {
-  background-size: contain;
-}
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
 .p-4 {
   padding: 1rem;
 }
@@ -1069,6 +976,14 @@ select {
 }
 .p-0 {
   padding: 0px;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .px-\[20px\] {
   padding-left: 20px;
@@ -1086,17 +1001,11 @@ select {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.pl-3 {
+  padding-left: 0.75rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-4 {
+.pt-4 {
   padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 .pl-\[8px\] {
   padding-left: 8px;
@@ -1104,23 +1013,11 @@ select {
 .pr-16 {
   padding-right: 4rem;
 }
-.pl-3 {
-  padding-left: 0.75rem;
-}
-.pt-1 {
-  padding-top: 0.25rem;
-}
 .pt-16 {
   padding-top: 4rem;
 }
 .pr-5 {
   padding-right: 1.25rem;
-}
-.pt-2 {
-  padding-top: 0.5rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1130,6 +1027,10 @@ select {
 }
 .font-logo {
   font-family: Mochiy Pop P One, sans-serif;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-sm {
   font-size: 0.875rem;
@@ -1148,10 +1049,6 @@ select {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1165,6 +1062,10 @@ select {
 }
 .font-semibold {
   font-weight: 600;
+}
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1273,14 +1174,45 @@ select {
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+
+.navbar::before {
+    content: "";
+    border: 15px solid;
+    border-color: transparent transparent transparent #65c8c6;
+    position: absolute;
+    right: -30px;
+    top: -1px;
+    z-index: 40;
+    display: none;
+}
+
+.navbar:hover::before {
+    display: block !important;
+}
+
+.hover\:bg-\[\#65c8c6\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
+}
+
 .hover\:text-sky-600:hover {
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
+.group:hover .group-hover\:block {
+  display: block;
+}
+
+.group:hover .group-hover\:grid {
+  display: grid;
+}
+
 @media (min-width: 640px) {
 
   .sm\:flex {
@@ -1291,6 +1223,7 @@ select {
     width: 18rem;
   }
 }
+
 @media (min-width: 768px) {
 
   .md\:block {
@@ -1301,7 +1234,12 @@ select {
     display: none;
   }
 }
+
 @media (min-width: 1024px) {
+
+  .lg\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }
 
   .lg\:col-span-3 {
     grid-column: span 3 / span 3;
@@ -1309,10 +1247,6 @@ select {
 
   .lg\:col-span-9 {
     grid-column: span 9 / span 9;
-  }
-
-  .lg\:col-span-7 {
-    grid-column: span 7 / span 7;
   }
 
   .lg\:mb-0 {
@@ -1354,9 +1288,5 @@ select {
 
   .lg\:pl-72 {
     padding-left: 18rem;
-  }
-
-  .lg\:pl-10 {
-    padding-left: 2.5rem;
   }
 }
