--- a/public/css/swipe.css
+++ b/public/css/swipe.css
@@ -23,44 +23,20 @@ body {
   background: #fff;
 
   /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
   align-items: center;
-
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.swiper {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.swiper-button-next,
+.swiper-button-next, 
 .swiper-button-prev {
-    color: #fff !important;
-    font-weight: 900;
-    font-size: 10px;
-}
-
-.swiper-button-next {
-  margin-left: 10px !important;
-}
-
-.swiper-button-prev {
-  margin-right: 10px !important;
+  color: #fff !important;
 }
