--- a/public/css/app.css
+++ b/public/css/app.css
@@ -632,11 +632,23 @@ select {
 .relative {
   position: relative;
 }
-.top-\[52px\] {
-  top: 52px;
+.top-\[0px\] {
+  top: 0px;
 }
-.left-\[216px\] {
-  left: 216px;
+.left-\[176px\] {
+  left: 176px;
+}
+.left-\[20px\] {
+  left: 20px;
+}
+.right-\[20px\] {
+  right: 20px;
+}
+.left-0 {
+  left: 0px;
+}
+.top-\[42px\] {
+  top: 42px;
 }
 .top-3 {
   top: 0.75rem;
@@ -659,74 +671,17 @@ select {
 .right-0 {
   right: 0px;
 }
-.left-0 {
-  left: 0px;
-}
 .top-16 {
   top: 4rem;
 }
-.top-\[0px\] {
-  top: 0px;
-}
-.left-\[176px\] {
-  left: 176px;
-}
-.top-0 {
-  top: 0px;
-}
-.top-4 {
-  top: 1rem;
-}
-.top-\[50px\] {
-  top: 50px;
-}
-.top-\[42px\] {
-  top: 42px;
-}
-.left-\[30px\] {
-  left: 30px;
-}
-.right-\[30px\] {
-  right: 30px;
-}
-.left-\[255px\] {
-  left: 255px;
-}
-.right-\[255px\] {
-  right: 255px;
-}
-.left-\[40px\] {
-  left: 40px;
-}
-.right-\[40px\] {
-  right: 40px;
-}
-.left-\[10px\] {
-  left: 10px;
-}
-.right-\[10px\] {
-  right: 10px;
-}
-.left-\[0px\] {
-  left: 0px;
-}
-.right-\[0px\] {
-  right: 0px;
-}
-.left-\[-16px\] {
-  left: -16px;
-}
-.right-\[-16px\] {
-  right: -16px;
-}
-.left-\[20px\] {
-  left: 20px;
-}
-.right-\[20px\] {
-  right: 20px;
-}
 .z-20 {
   z-index: 20;
+}
+.z-30 {
+  z-index: 30;
+}
+.z-40 {
+  z-index: 40;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -741,6 +696,12 @@ select {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.ml-4 {
+  margin-left: 1rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -772,14 +733,14 @@ select {
 .ml-5 {
   margin-left: 1.25rem;
 }
-.mt-2 {
-  margin-top: 0.5rem;
-}
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.ml-2 {
-  margin-left: 0.5rem;
+.mt-4 {
+  margin-top: 1rem;
+}
+.box-border {
+  box-sizing: border-box;
 }
 .block {
   display: block;
@@ -796,8 +757,17 @@ select {
 .hidden {
   display: none;
 }
-.h-\[300px\] {
-  height: 300px;
+.h-\[340px\] {
+  height: 340px;
+}
+.h-\[400px\] {
+  height: 400px;
+}
+.h-\[240px\] {
+  height: 240px;
+}
+.h-\[100\%\] {
+  height: 100%;
 }
 .h-\[24px\] {
   height: 24px;
@@ -817,47 +787,11 @@ select {
 .h-5 {
   height: 1.25rem;
 }
-.h-3 {
-  height: 0.75rem;
-}
-.h-24 {
-  height: 6rem;
-}
-.h-\[90px\] {
-  height: 90px;
-}
-.h-\[318px\] {
-  height: 318px;
-}
-.h-\[320px\] {
-  height: 320px;
-}
-.h-\[340px\] {
-  height: 340px;
-}
-.h-\[339px\] {
-  height: 339px;
-}
-.h-\[400px\] {
-  height: 400px;
-}
-.h-full {
-  height: 100%;
-}
-.h-\[100\%\] {
-  height: 100%;
-}
-.h-\[400\] {
-  height: 400;
+.h-\[200px\] {
+  height: 200px;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\] {
   max-height: calc(100vh - 4rem);
-}
-.max-h-\[400px\] {
-  max-height: 400px;
-}
-.max-h-\[100\%\] {
-  max-height: 100%;
 }
 .min-h-\[400px\] {
   min-height: 400px;
@@ -868,20 +802,20 @@ select {
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\] {
   min-height: calc(100vh - 4rem);
 }
-.min-h-\[100\%\] {
-  min-height: 100%;
+.w-full {
+  width: 100%;
 }
-.min-h-\[500px\] {
-  min-height: 500px;
+.w-\[240px\] {
+  width: 240px;
+}
+.w-\[100\%\] {
+  width: 100%;
 }
 .w-\[24px\] {
   width: 24px;
 }
 .w-1\/4 {
   width: 25%;
-}
-.w-full {
-  width: 100%;
 }
 .w-96 {
   width: 24rem;
@@ -904,8 +838,8 @@ select {
 .w-5 {
   width: 1.25rem;
 }
-.w-\[50\%\] {
-  width: 50%;
+.w-\[200px\] {
+  width: 200px;
 }
 .min-w-\[1280\.3px\] {
   min-width: 1280.3px;
@@ -915,24 +849,6 @@ select {
 }
 .max-w-md {
   max-width: 28rem;
-}
-.max-w-\[400px\] {
-  max-width: 400px;
-}
-.max-w-\[600px\] {
-  max-width: 600px;
-}
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-.max-w-\[1200px\] {
-  max-width: 1200px;
-}
-.max-w-full {
-  max-width: 100%;
-}
-.max-w-\[100\%\] {
-  max-width: 100%;
 }
 .flex-none {
   flex: none;
@@ -992,11 +908,20 @@ select {
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1022,14 +947,8 @@ select {
 .gap-5 {
   gap: 1.25rem;
 }
-.gap-y-4 {
-  row-gap: 1rem;
-}
-.gap-y-1 {
-  row-gap: 0.25rem;
-}
-.gap-y-0 {
-  row-gap: 0px;
+.gap-0 {
+  gap: 0px;
 }
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
@@ -1050,6 +969,9 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.rounded-\[10px\] {
+  border-radius: 10px;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1059,14 +981,18 @@ select {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.border-\[10px\] {
-  border-width: 10px;
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 .border-b {
   border-bottom-width: 1px;
 }
-.border-solid {
-  border-style: solid;
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -1080,9 +1006,9 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
-.border-white {
+.border-l-teal-100 {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-left-color: rgb(204 251 241 / var(--tw-border-opacity));
 }
 .bg-\[\#eee\] {
   --tw-bg-opacity: 1;
@@ -1120,17 +1046,59 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
-.bg-\[rgb\(255\2c 255\2c 255\)\] {
+.bg-\[\#666\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(102 102 102 / var(--tw-bg-opacity));
 }
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
+.bg-\[\#999\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 153 153 / var(--tw-bg-opacity));
+}
+.bg-\[\#000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-\[\#111\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+}
+.bg-\[\#fafafa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+}
+.bg-\[\#757474\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(117 116 116 / var(--tw-bg-opacity));
+}
+.bg-\[\#b1b1b1\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(177 177 177 / var(--tw-bg-opacity));
+}
+.bg-\[\#c4c2c2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 194 194 / var(--tw-bg-opacity));
+}
+.bg-\[\#e0e0e0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 224 224 / var(--tw-bg-opacity));
+}
+.bg-\[\#e7e7e7\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(231 231 231 / var(--tw-bg-opacity));
+}
+.bg-\[\#f7f7f7\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+.bg-\[\#eeec\] {
+  background-color: #eeec;
 }
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1152,6 +1120,18 @@ select {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .px-\[20px\] {
   padding-left: 20px;
   padding-right: 20px;
@@ -1168,19 +1148,17 @@ select {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
 .pl-3 {
   padding-left: 0.75rem;
 }
 .pt-4 {
   padding-top: 1rem;
+}
+.pl-4 {
+  padding-left: 1rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
 }
 .pl-\[8px\] {
   padding-left: 8px;
@@ -1194,17 +1172,11 @@ select {
 .pr-5 {
   padding-right: 1.25rem;
 }
-.pl-2 {
-  padding-left: 0.5rem;
-}
-.pl-4 {
-  padding-left: 1rem;
-}
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pt-1 {
-  padding-top: 0.25rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-left {
   text-align: left;
@@ -1219,15 +1191,25 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-\[14px\] {
+  font-size: 14px;
+}
+.text-\[12px\] {
+  font-size: 12px;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-\[16px\] {
+  font-size: 16px;
+}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 .text-\[18px\] {
   font-size: 18px;
-}
-.text-\[14px\] {
-  font-size: 14px;
 }
 .text-\[13px\] {
   font-size: 13px;
@@ -1244,32 +1226,29 @@ select {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-.text-\[12px\] {
-  font-size: 12px;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-\[16px\] {
-  font-size: 16px;
-}
-.font-bold {
-  font-weight: 700;
-}
 .font-semibold {
   font-weight: 600;
 }
 .font-medium {
   font-weight: 500;
 }
+.font-bold {
+  font-weight: 700;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-rose-600 {
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1286,10 +1265,6 @@ select {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .text-gray-700 {
   --tw-text-opacity: 1;
@@ -1310,6 +1285,10 @@ select {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.line-through {
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
 }
 .opacity-0 {
   opacity: 0;
@@ -1338,6 +1317,16 @@ select {
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .ring-2 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -1361,6 +1350,10 @@ select {
 }
 .ring-offset-2 {
   --tw-ring-offset-width: 2px;
+}
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -1394,10 +1387,6 @@ select {
     display: block !important;
 }
 
-.hover\:rounded:hover {
-  border-radius: 0.25rem;
-}
-
 .hover\:rounded-lg:hover {
   border-radius: 0.5rem;
 }
@@ -1407,50 +1396,9 @@ select {
   background-color: rgb(101 200 198 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-sky-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-}
-
-.hover\:font-normal:hover {
-  font-weight: 400;
-}
-
-.hover\:font-medium:hover {
-  font-weight: 500;
-}
-
-.hover\:font-bold:hover {
-  font-weight: 700;
-}
-
-.hover\:font-semibold:hover {
-  font-weight: 600;
-}
-
 .hover\:text-sky-600:hover {
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.marker\:hover\:bg-\[\#65c8c6\]:hover *::marker {
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
-}
-
-.marker\:hover\:bg-\[\#65c8c6\]:hover::marker {
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1494,6 +1442,10 @@ select {
     right: -16px;
   }
 
+  .lg\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .lg\:col-span-7 {
     grid-column: span 7 / span 7;
   }
@@ -1506,17 +1458,16 @@ select {
     grid-column: span 9 / span 9;
   }
 
-  .lg\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
-  .lg\:my-2 {
+  .lg\:mt-2 {
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .lg\:mt-1 {
+    margin-top: 0.25rem;
   }
 
   .lg\:block {
@@ -1535,24 +1486,8 @@ select {
     height: 400px;
   }
 
-  .lg\:h-\[300px\] {
-    height: 300px;
-  }
-
-  .lg\:min-w-\[1280\.3px\] {
-    min-width: 1280.3px;
-  }
-
   .lg\:grid-cols-8 {
     grid-template-columns: repeat(8, minmax(0, 1fr));
-  }
-
-  .lg\:gap-4 {
-    gap: 1rem;
-  }
-
-  .lg\:gap-6 {
-    gap: 1.5rem;
   }
 
   .lg\:gap-8 {
